[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UI/ServerCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Entities/Pickcup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/ServerListener.gd" type="Script" id=5]
[ext_resource path="res://Textures/default.png" type="Texture" id=6]

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 50, 50 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.760784, 0.760784, 0.760784, 1 )
albedo_texture = ExtResource( 6 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 25, 1, 25 )

[sub_resource type="CapsuleMesh" id=5]

[node name="Map" type="Spatial"]
script = ExtResource( 2 )
ready_players_label = NodePath("Label3DPlayersReady")
lobby_spawn_points = NodePath("LobbySpawnPoints")
game_spawn_points = NodePath("GameSpawnPoints")

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="MainMenu" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
max_nickname_length = 30

[node name="Left" type="TabContainer" parent="UI/MainMenu"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 478.0
margin_bottom = 590.0
size_flags_horizontal = 3
tab_align = 0
tabs_visible = false

[node name="Main" type="VBoxContainer" parent="UI/MainMenu/Left"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Title" type="Label" parent="UI/MainMenu/Left/Main"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 470.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 6
text = "INSERT TITLE HERE"
align = 1
valign = 1
clip_text = true

[node name="Control" type="Control" parent="UI/MainMenu/Left/Main"]
margin_top = 104.0
margin_right = 470.0
margin_bottom = 143.0
size_flags_vertical = 3

[node name="ErrorMessage" type="Label" parent="UI/MainMenu/Left/Main"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 147.0
margin_right = 470.0
margin_bottom = 161.0
valign = 2
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu/Left/Main"]
margin_top = 165.0
margin_right = 470.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="Nickname" type="LineEdit" parent="UI/MainMenu/Left/Main/HBoxContainer"]
margin_right = 421.0
margin_bottom = 60.0
size_flags_horizontal = 3
max_length = 15
placeholder_text = "Nickname"
caret_blink = true
caret_blink_speed = 0.2

[node name="CharCount" type="Label" parent="UI/MainMenu/Left/Main/HBoxContainer"]
margin_left = 425.0
margin_right = 470.0
margin_bottom = 60.0
rect_min_size = Vector2( 45, 0 )
size_flags_vertical = 3
text = "0/15"
align = 2
valign = 1

[node name="HSeparator" type="HSeparator" parent="UI/MainMenu/Left/Main"]
margin_top = 229.0
margin_right = 470.0
margin_bottom = 279.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="Host" type="Button" parent="UI/MainMenu/Left/Main"]
margin_top = 283.0
margin_right = 470.0
margin_bottom = 343.0
rect_min_size = Vector2( 0, 60 )
hint_tooltip = "Host a server on thi LAN"
size_flags_horizontal = 3
disabled = true
text = "HOST"

[node name="Join" type="Button" parent="UI/MainMenu/Left/Main"]
margin_top = 347.0
margin_right = 470.0
margin_bottom = 407.0
rect_min_size = Vector2( 0, 60 )
hint_tooltip = "Join a server on this LAN"
size_flags_horizontal = 3
disabled = true
text = "JOIN"
clip_text = true

[node name="Settings" type="Button" parent="UI/MainMenu/Left/Main"]
margin_top = 411.0
margin_right = 470.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
text = "SETTINGS"
clip_text = true

[node name="Quit" type="Button" parent="UI/MainMenu/Left/Main"]
margin_top = 475.0
margin_right = 470.0
margin_bottom = 535.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
text = "QUIT"
clip_text = true

[node name="Control2" type="Control" parent="UI/MainMenu/Left/Main"]
margin_top = 539.0
margin_right = 470.0
margin_bottom = 578.0
size_flags_vertical = 3

[node name="Settings" type="VBoxContainer" parent="UI/MainMenu/Left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Title" type="Label" parent="UI/MainMenu/Left/Settings"]
margin_right = 470.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Settings"
align = 1
valign = 1
clip_text = true

[node name="Control2" type="Control" parent="UI/MainMenu/Left/Settings"]
margin_top = 18.0
margin_right = 470.0
margin_bottom = 111.0
size_flags_vertical = 3

[node name="MasterLabel" type="Label" parent="UI/MainMenu/Left/Settings"]
margin_top = 115.0
margin_right = 470.0
margin_bottom = 129.0
size_flags_horizontal = 3
text = "Main"
clip_text = true

[node name="MasterSlider" type="HSlider" parent="UI/MainMenu/Left/Settings"]
margin_top = 133.0
margin_right = 470.0
margin_bottom = 149.0

[node name="SfxLabel" type="Label" parent="UI/MainMenu/Left/Settings"]
margin_top = 153.0
margin_right = 470.0
margin_bottom = 183.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Sound effects"
valign = 2
clip_text = true

[node name="SfxSlider" type="HSlider" parent="UI/MainMenu/Left/Settings"]
margin_top = 187.0
margin_right = 470.0
margin_bottom = 203.0

[node name="MusicLabel" type="Label" parent="UI/MainMenu/Left/Settings"]
margin_top = 207.0
margin_right = 470.0
margin_bottom = 237.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Music"
valign = 2
clip_text = true

[node name="MusicSlider" type="HSlider" parent="UI/MainMenu/Left/Settings"]
margin_top = 241.0
margin_right = 470.0
margin_bottom = 257.0

[node name="HSeparator" type="HSeparator" parent="UI/MainMenu/Left/Settings"]
margin_top = 261.0
margin_right = 470.0
margin_bottom = 311.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="MouseSensitivityLabel" type="Label" parent="UI/MainMenu/Left/Settings"]
margin_top = 315.0
margin_right = 470.0
margin_bottom = 329.0
text = "Mouse sensitivity"
clip_text = true

[node name="MouseSensitivitySlider" type="HSlider" parent="UI/MainMenu/Left/Settings"]
margin_top = 333.0
margin_right = 470.0
margin_bottom = 349.0

[node name="Control" type="Control" parent="UI/MainMenu/Left/Settings"]
margin_top = 353.0
margin_right = 470.0
margin_bottom = 446.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="UI/MainMenu/Left/Settings"]
margin_top = 450.0
margin_right = 470.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 40 )
text = "CANCEL"
clip_text = true

[node name="Save and back" type="Button" parent="UI/MainMenu/Left/Settings"]
margin_top = 494.0
margin_right = 470.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 40 )
text = "SAVE AND BACK"
clip_text = true

[node name="Reset" type="Button" parent="UI/MainMenu/Left/Settings"]
margin_top = 538.0
margin_right = 470.0
margin_bottom = 578.0
rect_min_size = Vector2( 0, 40 )
text = "DEFAULT"
clip_text = true

[node name="ServerList" type="VBoxContainer" parent="UI/MainMenu/Left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 5 )
cleanup_timer = NodePath("CleanupTimer")
server_card_list = NodePath("ScrollContainer/VBoxContainer")

[node name="CleanupTimer" type="Timer" parent="UI/MainMenu/Left/ServerList"]
wait_time = 3.0

[node name="Label" type="Label" parent="UI/MainMenu/Left/ServerList"]
margin_right = 470.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Available servers"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MainMenu/Left/ServerList"]
margin_top = 34.0
margin_right = 470.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/Left/ServerList/ScrollContainer"]
margin_right = 470.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerCard" parent="UI/MainMenu/Left/ServerList/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 470.0

[node name="ManualSetup" type="Button" parent="UI/MainMenu/Left/ServerList"]
margin_top = 494.0
margin_right = 470.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Manual setup"

[node name="Back" type="Button" parent="UI/MainMenu/Left/ServerList"]
margin_top = 538.0
margin_right = 470.0
margin_bottom = 578.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Back"

[node name="ManualSetup" type="VBoxContainer" parent="UI/MainMenu/Left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Title" type="Label" parent="UI/MainMenu/Left/ManualSetup"]
margin_right = 470.0
margin_bottom = 14.0
text = "Manual setup"
align = 1
valign = 1

[node name="Control" type="Control" parent="UI/MainMenu/Left/ManualSetup"]
margin_top = 18.0
margin_right = 470.0
margin_bottom = 214.0
size_flags_vertical = 3

[node name="ErrorMessage" type="Label" parent="UI/MainMenu/Left/ManualSetup"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 218.0
margin_right = 470.0
margin_bottom = 232.0
valign = 1

[node name="LineEdit" type="LineEdit" parent="UI/MainMenu/Left/ManualSetup"]
margin_top = 236.0
margin_right = 470.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "127.0.0.1"
max_length = 40
placeholder_text = "IP address"

[node name="HSeparator" type="HSeparator" parent="UI/MainMenu/Left/ManualSetup"]
margin_top = 280.0
margin_right = 470.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="ManualJoin" type="Button" parent="UI/MainMenu/Left/ManualSetup"]
margin_top = 294.0
margin_right = 470.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Join"

[node name="Back" type="Button" parent="UI/MainMenu/Left/ManualSetup"]
margin_top = 338.0
margin_right = 470.0
margin_bottom = 378.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Back"

[node name="Control2" type="Control" parent="UI/MainMenu/Left/ManualSetup"]
margin_top = 382.0
margin_right = 470.0
margin_bottom = 578.0
size_flags_vertical = 3

[node name="HostSetup" type="VBoxContainer" parent="UI/MainMenu/Left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="UI/MainMenu/Left/HostSetup"]
margin_right = 472.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Host match"
align = 1
valign = 1
clip_text = true

[node name="ErrorMessage" type="Label" parent="UI/MainMenu/Left/HostSetup"]
margin_top = 34.0
margin_right = 472.0
margin_bottom = 48.0

[node name="ServerName" type="LineEdit" parent="UI/MainMenu/Left/HostSetup"]
margin_top = 52.0
margin_right = 472.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
max_length = 30
placeholder_text = "Server name"
caret_blink = true

[node name="Host" type="Button" parent="UI/MainMenu/Left/HostSetup"]
margin_top = 96.0
margin_right = 472.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Host"

[node name="Back" type="Button" parent="UI/MainMenu/Left/HostSetup"]
margin_top = 140.0
margin_right = 472.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Back"

[node name="GameMenu" type="VBoxContainer" parent="UI/MainMenu/Left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="UI/MainMenu/Left/GameMenu"]
margin_top = 173.0
margin_right = 472.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 40 )
text = "Pause"
align = 1
valign = 1

[node name="LeaveMatch" type="Button" parent="UI/MainMenu/Left/GameMenu"]
margin_top = 217.0
margin_right = 472.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 60 )
text = "Leave match"

[node name="Settings" type="Button" parent="UI/MainMenu/Left/GameMenu"]
margin_top = 281.0
margin_right = 472.0
margin_bottom = 341.0
rect_min_size = Vector2( 0, 60 )
text = "Settings"

[node name="QuitToMatch" type="Button" parent="UI/MainMenu/Left/GameMenu"]
margin_top = 345.0
margin_right = 472.0
margin_bottom = 405.0
rect_min_size = Vector2( 0, 60 )
text = "Quit to title"

[node name="VSeparator" type="VSeparator" parent="UI/MainMenu"]
margin_left = 482.0
margin_right = 532.0
margin_bottom = 590.0
rect_min_size = Vector2( 50, 0 )

[node name="Right" type="VBoxContainer" parent="UI/MainMenu"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 536.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3

[node name="TextureRect" type="Panel" parent="UI/MainMenu/Right"]
self_modulate = Color( 1, 1, 1, 0.262745 )
margin_right = 478.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="UI/MainMenu/Right/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = SubResource( 4 )
expand = true
stretch_mode = 7

[node name="Panel" type="Panel" parent="UI/MainMenu/Right"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 540.0
margin_right = 478.0
margin_bottom = 590.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu/Right/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="MeshSelectorLeft" type="Button" parent="UI/MainMenu/Right/Panel/HBoxContainer"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
text = "<"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/Right/Panel/HBoxContainer"]
margin_left = 139.0
margin_right = 339.0
margin_bottom = 50.0
alignment = 1

[node name="CharacterIdx" type="Label" parent="UI/MainMenu/Right/Panel/HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 200.0
margin_bottom = 23.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 5
text = "1/2"
align = 1
valign = 1

[node name="MeshName" type="Label" parent="UI/MainMenu/Right/Panel/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 200.0
margin_bottom = 41.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 5
text = "name of character"
align = 1
valign = 1

[node name="MeshSelectorRight" type="Button" parent="UI/MainMenu/Right/Panel/HBoxContainer"]
margin_left = 343.0
margin_right = 383.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
text = ">"

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
layers = 524289
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 512 )
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.41837, 7.59271 )
cull_mask = 524288

[node name="PlayerPreview" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.08059, 0 )
layers = 524288
cast_shadow = 0
mesh = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.89923, -0.437477, -2.64374e-08, 0.261784, 0.538094, 0.801202, -0.350507, -0.720464, 0.598395, 0, 15.666, 0 )
shadow_enabled = true

[node name="Label3DPlayersReady" type="Label3D" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 1, 0, 13.0122, -29.8315 )
double_sided = false
modulate = Color( 1, 0, 0, 1 )
text = "Players ready:

1/4"
horizontal_alignment = 0
vertical_alignment = 0
line_spacing = 1.0

[node name="LobbySpawnPoints" type="Spatial" parent="."]

[node name="1" type="Position3D" parent="LobbySpawnPoints"]
transform = Transform( 0.778298, 0, -0.627895, 0, 1, 0, 0.627895, 0, 0.778298, -21.9925, 2.5, 22.6408 )

[node name="2" type="Position3D" parent="LobbySpawnPoints"]
transform = Transform( 0.710898, 0, 0.703295, 0, 1, 0, -0.703295, 0, 0.710898, 21.9282, 2.5, 21.8213 )

[node name="3" type="Position3D" parent="LobbySpawnPoints"]
transform = Transform( -0.749025, 0, 0.662542, 0, 1, 0, -0.662542, 0, -0.749025, 21.2864, 2.5, -21.6073 )

[node name="4" type="Position3D" parent="LobbySpawnPoints"]
transform = Transform( -0.6915, 0, -0.722376, 0, 1, 0, 0.722376, 0, -0.6915, -21.7143, 2.5, -20.3772 )

[node name="5" type="Position3D" parent="LobbySpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )

[node name="GameSpawnPoints" type="Spatial" parent="."]

[node name="1" type="Position3D" parent="GameSpawnPoints"]
transform = Transform( 0.778298, 0, -0.627895, 0, 1, 0, 0.627895, 0, 0.778298, -21.9925, 2.5, 22.6408 )

[node name="2" type="Position3D" parent="GameSpawnPoints"]
transform = Transform( 0.710898, 0, 0.703295, 0, 1, 0, -0.703295, 0, 0.710898, 21.9282, 2.5, 21.8213 )

[node name="3" type="Position3D" parent="GameSpawnPoints"]
transform = Transform( -0.749025, 0, 0.662542, 0, 1, 0, -0.662542, 0, -0.749025, 21.2864, 2.5, -21.6073 )

[node name="4" type="Position3D" parent="GameSpawnPoints"]
transform = Transform( -0.6915, 0, -0.722376, 0, 1, 0, 0.722376, 0, -0.6915, -21.7143, 2.5, -20.3772 )

[node name="5" type="Position3D" parent="GameSpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )

[node name="Pickcup" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.80395, 0.61439, 0 )
pickup_type = 1

[connection signal="text_changed" from="UI/MainMenu/Left/Main/HBoxContainer/Nickname" to="UI/MainMenu" method="_on_Nickname_text_changed"]
[connection signal="pressed" from="UI/MainMenu/Left/Main/Host" to="UI/MainMenu" method="_change_tab" binds= [ 4 ]]
[connection signal="pressed" from="UI/MainMenu/Left/Main/Join" to="UI/MainMenu" method="_change_tab" binds= [ 2 ]]
[connection signal="pressed" from="UI/MainMenu/Left/Main/Settings" to="UI/MainMenu" method="_change_tab" binds= [ 1 ]]
[connection signal="pressed" from="UI/MainMenu/Left/Main/Quit" to="UI/MainMenu" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/MainMenu/Left/Settings/Back" to="UI/MainMenu" method="_previous_tab"]
[connection signal="visibility_changed" from="UI/MainMenu/Left/ServerList" to="UI/MainMenu/Left/ServerList" method="_on_ServerList_visibility_changed"]
[connection signal="timeout" from="UI/MainMenu/Left/ServerList/CleanupTimer" to="UI/MainMenu/Left/ServerList" method="_on_CleanupTimer_timeout"]
[connection signal="pressed" from="UI/MainMenu/Left/ServerList/ManualSetup" to="UI/MainMenu" method="_change_tab" binds= [ 3 ]]
[connection signal="pressed" from="UI/MainMenu/Left/ServerList/Back" to="UI/MainMenu" method="_previous_tab"]
[connection signal="text_changed" from="UI/MainMenu/Left/ManualSetup/LineEdit" to="UI/MainMenu" method="_on_IpAddress_text_changed"]
[connection signal="pressed" from="UI/MainMenu/Left/ManualSetup/ManualJoin" to="UI/MainMenu" method="_on_ManualJoin_pressed"]
[connection signal="pressed" from="UI/MainMenu/Left/ManualSetup/Back" to="UI/MainMenu" method="_previous_tab"]
[connection signal="pressed" from="UI/MainMenu/Left/HostSetup/Host" to="UI/MainMenu" method="_on_Host_pressed"]
[connection signal="pressed" from="UI/MainMenu/Left/HostSetup/Back" to="UI/MainMenu" method="_previous_tab"]
[connection signal="pressed" from="UI/MainMenu/Right/Panel/HBoxContainer/MeshSelectorLeft" to="UI/MainMenu" method="_select_character" binds= [ -1 ]]
[connection signal="pressed" from="UI/MainMenu/Right/Panel/HBoxContainer/MeshSelectorRight" to="UI/MainMenu" method="_select_character" binds= [ 1 ]]
